# Classifier_TensorRT

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  note.md
cuda/: test_cuda.cu  trt_preprocess.cu
include/: test_cuda.hpp  trt_classifier.hpp  trt_detector.hpp  trt_logger.hpp  trt_model.hpp  trt_preprocess.hpp  trt_timer.hpp  trt_worker.hpp  utils.hpp
scripts/: export_onnx.py  export_yolov8.py
src/: test_cuda.cpp  trt_classifier.cpp  trt_detector.cpp  trt_logger.cpp  trt_model.cpp  trt_preprocess.cpp  trt_timer.cpp  trt_worker.cpp  utils.cpp
ultralytics/ultralytics/nn/modules/: head.py
